# Text-qrcode-detection

./: CMakeLists.txt  FindTesseract.cmake  README.md  package.xml
launch/: qrtext.launch
src/: Imgpub.cpp  final.cpp  main.cpp  textprep.cpp  undistort.cpp
